--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.4.0",
     "classcat": "^4.1.0",
     "dotenv-webpack": "^4.0.0",
+    "moment": "^2.29.1",
     "next": "latest",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
