--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.11.0",
     "react-redux": "^7.2.1",
     "sass": "^1.27.0"
   },
