--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.11.0",
+    "react-markdown": "^5.0.2",
     "react-redux": "^7.2.1",
     "sass": "^1.27.0"
   },
